examples/test/testpolicy3379.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3379
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key7: value19
      key40: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value15
          key44: value1
      podSelector:
        matchLabels:
          key13: value8
          key36: value31
